--- a/aula-testes-10/package.json
+++ b/aula-testes-10/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "prisma:migrate:dev": "prisma migrate dev"
+    "test:load-envs": "dotenv -e .env.test",
+    "test:migration:run": "npm run test:load-envs prisma migrate deploy",
+    "test": "npm run test:load-envs jest"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/supertest": "^2.0.12",
+    "dotenv-cli": "^7.3.0",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "prisma": "^5.0.0",
